--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.561.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "16.0.10",
     "react": "19.2.1",
